--- a/css/shared/variables.css
+++ b/css/shared/variables.css
@@ -13,6 +13,7 @@
   --colorBlueLight: #31c0ff;
   --colorCyan: #1580ab;
   --colorGreen: #080;
+  --colorGrey: #b6b6b6;
   --colorGreyDark: #212529;
   --colorGreyLight: #f8f8f8;
   --colorRed: #d00;
