--- a/css/win/viewClusters.css
+++ b/css/win/viewClusters.css
@@ -108,7 +108,7 @@
   background-image: url(../../img/win/toggle-up.svg);
 }
 
-.file-block-toggle a:where(:hover, :focus) {
+.file-block-toggle a:is(:hover, :focus) {
   background-color: var(--bgActive);
 }
 
@@ -137,7 +137,7 @@
   text-decoration: none;
 }
 
-.file-block h1 a.copy-all:where(:focus, :hover) {
+.file-block h1 a.copy-all:is(:focus, :hover) {
   text-decoration: underline;
 }
 
@@ -157,7 +157,7 @@
   text-decoration: none;
 }
 
-.file-block div a:where(:focus, :hover) {
+.file-block div a:is(:focus, :hover) {
   text-decoration: underline;
 }
 
@@ -169,7 +169,7 @@
   line-height: 1rem;
 }
 
-.file-block :where(th, td) {
+.file-block :is(th, td) {
   padding: 0;
 }
 
@@ -195,7 +195,7 @@
   color: var(--colorRed);
 }
 
-:where(#clusters-modulate, #clusters-compare) .fa {
+:is(#clusters-modulate, #clusters-compare) .fa {
   font-variant: small-caps;
   letter-spacing: 1px;
 }
@@ -220,11 +220,7 @@
   transition: opacity .3s ease-out;
 }
 
-#clusters-modulate-popup.visible {
-  opacity: 1;
-}
-
-#clusters-modulate-popup :where(a, div) {
+#clusters-modulate-popup :is(a, div) {
   display: block;
   outline: none;
   border-bottom: 1px solid var(--line);
@@ -256,11 +252,11 @@
   letter-spacing: 0;
 }
 
-#clusters-modulate-popup :where(a:hover, a.active) {
+#clusters-modulate-popup :is(a:hover, a.active) {
   background-color: var(--bgActive);
 }
 
-#clusters-modulate-popup :where(a:hover, a.active) span {
+#clusters-modulate-popup :is(a:hover, a.active) span {
   color: var(--text);
 }
 
@@ -399,4 +395,63 @@
 .cluster-center .cluster-dominant {
   font-size: 1rem;
   line-height: 1.5rem;
+}
+
+
+/* PREVIEW POPUP -------------------------------- */
+
+#clusters-preview {
+  position: fixed;
+  top: 190px;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0;
+  box-shadow: var(--shadow);
+  border: 1px solid var(--line);
+  border-radius: 10px;
+  padding: 10px;
+  width: 415px;
+  background-color: #fff;
+  font-size: .8rem;
+  line-height: 1.2rem;
+  transition: opacity .3s ease-out;
+}
+
+#clusters-preview a {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 30px;
+  height: 30px;
+}
+
+#clusters-preview a:focus {
+  border-radius: 10px;
+  outline: 2px solid var(--outline);
+  outline-offset: -4px;
+}
+
+#clusters-preview p {
+  margin: 0 0 10px;
+}
+
+#clusters-preview p:first-of-type {
+  margin-top: 10px;
+}
+
+#clusters-preview p:last-child {
+  margin-bottom: 0;
+  text-align: center;
+}
+
+p#clusters-preview-modulate {
+  margin: 30px 0 35px;
+}
+
+#clusters-preview label {
+  font-style: normal;
+}
+
+#clusters-preview-choose {
+  width: 240px;
 }
