--- a/css/html/help.css
+++ b/css/html/help.css
@@ -76,9 +76,11 @@ abbr {
 
 code {
   display: inline;
+  vertical-align: top;
   margin: 0;
   border-radius: 5px;
   padding: 0 5px;
+  line-height: 1.5rem;
   word-break: break-all;
 }
 
