[[change]] Text in Dialogen mit Fehlermeldung auswählbar

--- a/css/shared/overlay.css
+++ b/css/shared/overlay.css
@@ -116,6 +116,10 @@
   margin-right: 30px;
 }
 
+#dialog-text .selectable {
+  user-select: text;
+}
+
 #dialog-text .update {
   display: inline-block;
   width: 95px;
