[[feature]] mithilfe eines neuen Icons in der XML-Ansicht kann der Quelltext einer XML-Datei in die Zwischenablage kopiert werden

--- a/css/win/viewXml.css
+++ b/css/win/viewXml.css
@@ -70,6 +70,7 @@
 }
 
 #xml tr[data-status="0"] td:first-child img,
+#xml tr td:nth-last-child(4) a,
 #xml tr td:nth-last-child(3) a,
 #xml tr td:nth-last-child(2) a,
 #xml tr td:last-child a {
@@ -77,6 +78,8 @@
 }
 
 #xml tr[data-status="0"]:hover td:first-child img,
+#xml tr:hover td:nth-last-child(4) a,
+#xml tr td:nth-last-child(4) a:focus,
 #xml tr:hover td:nth-last-child(3) a,
 #xml tr td:nth-last-child(3) a:focus,
 #xml tr:hover td:nth-last-child(2) a,
