[[fix]] Links im Fließtext des Handbuchs bekamen beim Navigieren via Tab ein Outline

--- a/css/html/help.css
+++ b/css/html/help.css
@@ -58,6 +58,7 @@ section {
 /* DESCRIPTION ---------------------------------- */
 
 section a {
+  outline: none;
   color: var(--colorBlue);
   text-decoration: none;
 }
