--- a/css/win/win.css
+++ b/css/win/win.css
@@ -125,6 +125,7 @@ header .label {
 }
 
 #fun-git {
+  position: relative;
   display: inline-block;
   margin-left: 15px;
 }
@@ -148,6 +149,26 @@ header .label {
 
 #fun-git a:is(:hover, :focus) {
   text-decoration: none;
+}
+
+/* Branch selector (see viewHints.css: #fun-git-branch-select) */
+
+#fun-git-branch-select {
+  top: 35px;
+  left: 0;
+  min-width: 150px;
+}
+
+#fun-git-branch-select .branch {
+  display: block;
+  width: max-content;
+  color: var(--text);
+  font-size: .8rem;
+  text-decoration: none;
+}
+
+#fun-git-branch-select .branch:is(:focus, :hover) {
+  color: var(--colorBlue);
 }
 
 
