[[change]] in der Überprüfen-Sektion der Clusterei werden Cluster, die in der Übersicht auf zdl.org ausgeblendet werden, nun ausgegraut dargestellt

--- a/css/win/viewClusters.css
+++ b/css/win/viewClusters.css
@@ -330,6 +330,10 @@
   text-align: center;
 }
 
+.cluster.filtered-cluster {
+  border-color: var(--line);
+}
+
 .cluster.changed-cluster {
   border-color: var(--colorRed);
 }
@@ -366,6 +370,10 @@
   display: inline-block;
   max-width: min-content;
   white-space: normal;
+}
+
+.cluster.filtered-cluster span {
+  color: var(--textGreyLight);
 }
 
 .cluster-circle {
