--- a/css/win/overlay.css
+++ b/css/win/overlay.css
@@ -1,37 +1,42 @@
 @charset "utf-8";
 
-/* ARTIKEL.JSON --------------------------------- */
+/* ARTIKEL.JSON + OVERVIEW ---------------------- */
 
-#artikel > div {
+:is(#artikel, #overview) > div {
   width: 400px;
 }
 
-#artikel div img {
+:is(#artikel, #overview) div img {
   vertical-align: top;
   margin-right: 10px;
 }
 
-#artikel div div {
+:is(#artikel, #overview) div div {
   margin: 10px;
 }
 
-#artikel p {
+:is(#artikel, #overview) p {
   margin: 0;
   font-size: .8rem;
   line-height: 1.2rem;
 }
 
-#artikel div p:first-child {
+:is(#artikel, #overview) div p:first-child {
   font-size: 1rem;
   line-height: 1.5rem;
 }
 
-#artikel div p:last-child {
+:is(#artikel, #overview) div p:last-child {
   margin-left: 40px;
 }
 
 #artikel > div > p {
   margin-bottom: 10px;
+  text-align: center;
+}
+
+#overview > div > p {
+  margin: 20px 0 10px;
   text-align: center;
 }
 
