[[feature]] in den Einstellungen gibt es nun eine Möglichkeit, die App mit einem ZDL-Repository-Klon zu verknüpfen

--- a/css/win/overlay.css
+++ b/css/win/overlay.css
@@ -193,11 +193,12 @@
   text-indent: 0;
 }
 
-#prefs-zeitstrahl {
+#prefs-zeitstrahl,
+#prefs-zdl {
   width: calc(100% - 22px - 75px);
 }
 
-#prefs-zeitstrahl + .icon {
+:is(#prefs-zeitstrahl, #prefs-zdl) + .icon {
   margin-left: 10px;
 }
 
