--- a/resources/artikel.tt
+++ b/resources/artikel.tt
@@ -1,6 +1,7 @@
-[% page_title = 'Wortgeschichte digital: Artikelübersicht' | html %]
+[% wgd_page_title = 'Wortgeschichte digital: Artikelübersicht' | html %]
 
 [% BLOCK html_head %]
+  <meta name="description" content="Wortgeschichte digital – Artikelübersicht mit allen Stichwörtern in verschiedenen Ansichten (Alphabet, Cluster, Zeitstrahl, Registerwörter)">
   <link rel="manifest" href="[% base %]wgd.webmanifest">
   <link rel="canonical" href="https://www.zdl.org/wb/wgd/Artikel">
   <link rel="stylesheet" href="[% base %]static/wgd/art.min.css" media="screen">
@@ -8,16 +9,16 @@
   <script src="[% base %]static/wgd/art.min.mjs" type="module"></script>
 [% END %]
 
-<div class="row justify-content-md-center">
-<div class="wgd-content col col-md-auto bg-white p-3 d shadow" id="wgd-uebersicht">
+<main class="wgd-content shadow">
 
-<h1>Artikelübersicht<br>von <i>Wortgeschichte digital</i></h1>
+<header>
+  <h1>Artikelübersicht<br>von <i>Wortgeschichte digital</i></h1>
 
-<p class="wgd-zu-start"
-  ><a href="[% base %]wb/wortgeschichten/"><abbr title="Wortgeschichte digital">WGd</abbr>-Startseite</a
-></p>
+  <p class="wgd-zu-start"
+    ><a href="[% base %]wb/wortgeschichten/"><abbr title="Wortgeschichte digital">WGd</abbr>-Startseite</a
+  ></p>
+</header>
 
 <div id="wgd-liste"></div>
 
-</div>
-</div>
+</main>
