[[feature]] in die von QS erzeugte Artikeldatendatei werden nun auch Verlinkungsinformationen zu externen Ressourcen eingebunden

--- a/css/win/overlay.css
+++ b/css/win/overlay.css
@@ -245,11 +245,12 @@
 }
 
 #prefs-zeitstrahl,
+#prefs-ressourcen,
 #prefs-zdl {
   width: calc(100% - 22px - 75px);
 }
 
-:is(#prefs-zeitstrahl, #prefs-zdl) + .icon {
+:is(#prefs-zeitstrahl, #prefs-ressourcen, #prefs-zdl) + .icon {
   margin-left: 10px;
 }
 
