--- a/resources/terminologie.tt
+++ b/resources/terminologie.tt
@@ -1,13 +1,41 @@
-[% wgd_page_title = 'Wortgeschichte digital: Terminologisches Kerninventar' | html %]
+[% wgd_content = 'true' %]
+
+[% wgd_page_title = 'Wortgeschichte digital: Terminologisches Kerninventar' %]
+
+[% wgd_desc = 'Beschreibung des terminologischen Kerninventars mit Literaturhinweisen und Rückverweisen zu den zum jeweiligen Terminus passenden Wortgeschichten' %]
 
 [% BLOCK html_head %]
-  <meta name="description" content="Wortgeschichte digital – Beschreibung des terminologischen Kerninventars mit Literaturhinweisen und Indizes der zum jeweiligen Terminus passenden Wortgeschichten">
+  <meta name="description" content="[% wgd_desc %]">
   <link rel="manifest" href="[% base %]wgd.webmanifest">
   <link rel="canonical" href="https://www.zdl.org/wb/wgd/Terminologie">
-  <link rel="stylesheet" href="[% base %]static/wgd/para-navi.min.css" media="screen">
-  <link rel="stylesheet" href="[% base %]static/wgd/para-navi-print.min.css" media="print">
-  <script src="[% base %]static/wgd/para-navi.min.mjs" type="module"></script>
+  <link rel="stylesheet" href="[% base %][% static_file('static/wgd/para-navi.min.css') %]" media="screen">
+  <link rel="stylesheet" href="[% base %][% static_file('static/wgd/para-navi-print.min.css') %]" media="print">
+  <script src="[% base %][% static_file('static/wgd/para-navi.min.mjs') %]" type="module"></script>
+  [% PROCESS 'wb/WGd/_structured-data.tt'
+      wgd_bread_url1 = "${base}wb/wortgeschichten/"
+      wgd_bread_name1 = 'Wortgeschichte digital'
+      wgd_bread_url2 = "${base}wb/wgd/Terminologie"
+      wgd_bread_name2 = 'Terminologisches Kerninventar'
+      wgd_keywords = '[ "Lexikographie", "Wörterbuch", "Neuhochdeutsch", "Sprache", "Terminologie", "Definition" ]'
+      wgd_license = '"license": "https://creativecommons.org/licenses/by-sa/4.0/deed.de",'
+  %]
 [% END %]
+
+<nav id="wgd-breadcrumb" class="wgd-breadcrumb-para-norm" itemscope="itemscope" itemtype="https://schema.org/BreadcrumbList" aria-label="Brotkrumennavigation von Wortgeschichte digital">
+  <ol>
+    <li itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"
+      ><a itemprop="item" href="[% base %]wb/wortgeschichten/"
+        ><span itemprop="name">Wortgeschichte digital</span
+      ></a
+      ><meta itemprop="position" content="1"
+    ></li>
+    <li itemprop="itemListElement" itemscope="itemscope" itemtype="https://schema.org/ListItem"
+      ><span itemprop="name" class="wgd-breadcrumb-wide">Terminologisches Kerninventar</span
+      ><span class="wgd-breadcrumb-narrow">Terminologie</span
+      ><meta itemprop="position" content="2"
+    ></li>
+  </ol>
+</nav>
 
 <main class="wgd-para wgd-term wgd-content shadow">
 
@@ -19,7 +47,7 @@
   ></p>
 </header>
 
-<p id="wgd-term-in-arbeit"><i>Diese Seite befindet sich noch im Aufbau und wird fortlaufend ergänzt.</i></p>
+<p id="wgd-term-in-arbeit"><i>Diese Seite wird fortlaufend ergänzt.</i></p>
 
 {{RESULT}}
 
