[[feuature]] neuer Hinweis: wird in einem Artikel auf ein Lemma verwiesen und dabei eine semantische Typisierung angegeben, sollte im korrespondierenden Artikel, also dem Artikel, auf den verwiesen wird, ein Rückverweis zu finden sein

--- a/css/win/viewHints.css
+++ b/css/win/viewHints.css
@@ -71,6 +71,10 @@
   max-width: 100%;
 }
 
+.hint p.pre {
+  white-space: pre;
+}
+
 .hint .text-correct,
 .hint .text-erroneous,
 .hint .text-hint,
